--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>portfolio</finalName>
 	</build>
 
 </project>
